cicd_files/k8s/log-display-setup/ingressElastic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elastic-ingress
spec:
  rules:
    - host: elasticsearch.olah023.rnd.gic.ericsson.se
      http:
        paths:
          - backend:
              serviceName: elasticsearch-master
              servicePort: 9200
            path: /
