cicd_files/k8s/log-display-setup/ingressKibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
  rules:
    - host: kibana.olah023.rnd.gic.ericsson.se
      http:
        paths:
          - backend:
              serviceName: kibana-kibana
              servicePort: 5601
            path: /
